tests/valid/test4.wf
a = TRUE;
b = TRUE;
c = FALSE;
resultado = (a AND b) OR NOT c;
print(resultado);
