tests/invalid/error1.wf
a = TRUE && FALSE;
print(a);
